k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: infra-devops-lab
  labels:
    name: infra-devops-lab
